--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+
 body {
+    align-items: center;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Indie Flower', cursive;
+    font-size: 15px;
     padding: 30px;
   }
 
+  .content {
+    max-width: 800px;
+    margin: auto;
+    background: white;
+    padding: 10px;
+  }
 
   h1, h3, p, a {
       text-align: center;
   }
 
+
   h3 {
     font-size: 30px;
-    border-bottom: 0px;
-  }
+    }
+      @media screen and (max-width: 480px) {
+        h3 {
+          font-size: 20px;
+        }
+      }
+
   .page-container {
     position: relative;
     min-height: 100vh;
@@ -28,9 +46,24 @@ body {
      color: rgb(145, 14, 5);
      border-bottom: 0px;
      padding-bottom: 0px;
-     /* line-height: 0px; */
+     line-height: 0px;
 
   }
+
+    @media only screen and (max-width: 700px) {
+      h1 {
+        font-size: 30px;
+        word-break: break-all;
+       }
+    }
+
+      @media screen and (max-width: 480px) {
+        h1 {
+          font-size: 29px;
+        }
+        
+      }
+
   .mynav {
     overflow: hidden;
     background-color:darkred;
@@ -63,7 +96,8 @@ body {
     padding: 3px 7px;
     font-size: 17px;
     display: flex;
-    border: 2px #dd3333;
+    border: 1px solid #dd3333;
+    border-radius: 10px;
     align-items: center;
     justify-content: center;
     background-color: #db9c9c;
